<resources>
    <string name="app_name">木瓜视频</string>
    <string name="setting" translatable="false">设置</string>
    <string name="resume" translatable="false">Resume</string>
    <string name="title_dialog" translatable="false">Tips</string>
    <string name="not_wx_pay" translatable="false">您未安装最新版本微信，不支持微信支付，请安装或升级微信版本</string>
    <string name="message_permission_rationale">授予下列权限以继续程序:\n\n%1$s</string>
    <string name="message_overlay_failed">您的电话不允许我们使用其他应用程序.</string>
    <string name="message_permission_always_failed">我们需要以下权限，请在设置中为我们开启：\n\n%1$s</string>
    <string name="share_title" translatable="false">神奇动物世界</string>
    <string name="share_content" translatable="false">抢红包，听故事，跟国宝合影</string>

    <string name="submit" translatable="false">确定</string>
    <string name="cancel" translatable="false">取消</string>

    <string name="home" translatable="false">首页</string>
    <string name="find" translatable="false">发现</string>
    <string name="list" translatable="false">榜单</string>
    <string name="me" translatable="false">我的</string>
    <string name="change_batches" translatable="false">换一批</string>
    <string name="find_class" translatable="false">分类</string>
    <string name="search" translatable="false">搜索</string>
    <string name="zking" translatable="false">二维码</string>
    <string name="release" translatable="false">发布</string>
    <string name="hot_search" translatable="false">热门搜索</string>
    <string name="recommend" translatable="false">推荐</string>
    <string name="income_withdrawal" translatable="false">收益提现</string>
    <string name="login_register" translatable="false">登录/注册</string>
    <string name="register" translatable="false">注册</string>
    <string name="advertisement" translatable="false">看广告、推广可增加更多次数哦！</string>
    <string name="me_promote" translatable="false">我要推广</string>
    <string name="me_promote2" translatable="false">我的推广</string>
    <string name="me_promote1" translatable="false">推广</string>
    <string name="message" translatable="false">消息通知</string>
    <string name="feedback" translatable="false">意见反馈</string>
    <string name="hot_exchange" translatable="false">火爆交流群</string>
    <string name="viewing_history" translatable="false">观看历史</string>
    <string name="local_cache" translatable="false">本地缓存</string>
    <string name="me_like" translatable="false">我喜欢的</string>
    <string name="equipment" translatable="false">锁屏密码</string>
    <string name="equipment1" translatable="false">清除锁屏密码</string>
    <string name="set" translatable="false">设置</string>
    <string name="vip_recharge" translatable="false">VIP充值</string>
    <string name="vip" translatable="false">VIP</string>
    <string name="forget" translatable="false">密码找回</string>
    <string name="me_collection" translatable="false">我的收藏</string>
    <string name="can_collection" translatable="false">取消收藏</string>
    <string name="can_like" translatable="false">取消喜欢</string>
    <string name="describe" translatable="false">详情描述（必填）</string>
    <string name="describe1" translatable="false">请详尽描述遇到的问题，以便我们为您即时解决（10-100字）</string>
    <string name="available_today" translatable="false">今日可观影次数</string>
    <string name="movie_watches" translatable="false">剩余观影次数</string>

    <string name="error_phone" translatable="false">手机号码格式错误</string>
    <string name="error_phone1" translatable="false">手机号码或验证码为空</string>
    <string name="error_" translatable="false">请输入完整</string>
    <string name="error_nickname" translatable="false">请输入您的昵称</string>
    <string name="error_pwd_length" translatable="false">密码位于6~16位</string>
    <string name="please_phone" translatable="false">请输入手机号码</string>
    <string name="please_code" translatable="false">请输入短信验证码</string>
    <string name="please_pwd1" translatable="false">请再次输入密码</string>
    <string name="please_pwd2" translatable="false">两次密码不一致</string>
    <string name="please_pwd3" translatable="false">请输入密码</string>
    <string name="error_1" translatable="false">请阅读协议</string>
    <string name="new_register" translatable="false">新用户注册</string>
    <string name="forget_pwd" translatable="false">忘记密码</string>
    <string name="phone_login" translatable="false">手机号登录</string>
    <string name="name_login" translatable="false">用户名登录</string>
    <string name="please_user" translatable="false">请输入用户名</string>
    <string name="login" translatable="false">登录</string>
    <string name="please_invitation" translatable="false">填写邀请码可以增加每日观影特权</string>
    <string name="user_login" translatable="false">已有账号？立即登录</string>
    <string name="submission" translatable="false">提交</string>
    <string name="extension" translatable="false">立即推广</string>
    <string name="buy_immediately" translatable="false">立即购买</string>
    <string name="performance" translatable="false">总业绩</string>
    <string name="balance" translatable="false">我的余额</string>
    <string name="withdrawable" translatable="false">可提现金额</string>
    <string name="payment" translatable="false">提现手续费</string>
    <string name="name_payee" translatable="false">收款人姓名</string>
    <string name="bank" translatable="false">银行卡号</string>
    <string name="withdrawable1" translatable="false">提现金额</string>
    <string name="submission1" translatable="false">提交申请</string>
    <string name="input_name" translatable="false">请输入收款人姓名</string>
    <string name="input_moble" translatable="false">请输入收款账号</string>
    <string name="input_balance" translatable="false">请输入提现金额</string>
    <string name="presentation" translatable="false">提 现</string>
    <string name="label" translatable="false">标签：</string>
    <string name="like_it" translatable="false">猜你喜欢</string>
    <string name="report" translatable="false">举报</string>
    <string name="out" translatable="false">退出登录</string>
    <string name="like" translatable="false">我喜欢的</string>
    <string name="delete" translatable="false">删除</string>
    <string name="clear_all" translatable="false">清除全部</string>
    <string name="text1" translatable="false">您的邀请码</string>
    <string name="text2" translatable="false">扫描上面二维码，下载APP</string>
    <string name="text3" translatable="false">推广分享获取永久免费观影</string>
    <string name="text4" translatable="false">请去推广页面推广好友增加观影次数吧</string>
    <string name="copy" translatable="false">复制</string>
    <string name="copy_url" translatable="false">复制链接</string>
    <string name="save_zking" translatable="false">保存二维码</string>
    <string name="name" translatable="false">用户名</string>
    <string name="phone" translatable="false">手机号</string>
    <string name="crear_time" translatable="false">注册时间</string>
    <string name="manage" translatable="false">管理</string>
    <string name="all" translatable="false">全选删除</string>

</resources>
