<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tl="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue_15163d"
        android:orientation="vertical">

        <include layout="@layout/include_top" />

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/px20">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="horizontal"
                    android:padding="@dimen/px20">

                    <android.support.v7.widget.AppCompatTextView
                        style="@style/Tv13black"
                        android:layout_weight="1"
                        android:text="@string/performance" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tv_performance"
                        style="@style/Tv13black"
                        android:textColor="@color/red_F72A61" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/px5"
                    android:background="@color/white"
                    android:orientation="horizontal"
                    android:padding="@dimen/px20">

                    <android.support.v7.widget.AppCompatTextView
                        style="@style/Tv13black"
                        android:layout_weight="1"
                        android:text="@string/balance" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tv_balance"
                        style="@style/Tv13black"
                        android:textColor="@color/red_F72A61" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/px5"
                    android:background="@color/white"
                    android:orientation="horizontal"
                    android:padding="@dimen/px20">

                    <android.support.v7.widget.AppCompatTextView
                        style="@style/Tv13black"
                        android:layout_weight="1"
                        android:text="@string/withdrawable" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tv_withdrawable"
                        style="@style/Tv13black"
                        android:textColor="@color/red_F72A61" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/px5"
                    android:background="@color/white"
                    android:orientation="horizontal"
                    android:padding="@dimen/px20">

                    <android.support.v7.widget.AppCompatTextView
                        style="@style/Tv13black"
                        android:layout_weight="1"
                        android:text="@string/payment" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tv_payment"
                        style="@style/Tv13black"
                        android:textColor="@color/red_F72A61" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/px60"
                    android:background="@color/white"
                    android:orientation="horizontal"
                    android:padding="@dimen/px20">

                    <android.support.v7.widget.AppCompatTextView
                        style="@style/Tv13black"
                        android:layout_weight="1"
                        android:text="@string/name_payee" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/et_name"
                        style="@style/Tv13black"
                        android:background="@null"
                        android:gravity="right"
                        android:hint="@string/input_name"
                        android:maxLines="1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/px5"
                    android:background="@color/white"
                    android:orientation="horizontal"
                    android:padding="@dimen/px20">

                    <android.support.v7.widget.AppCompatTextView
                        style="@style/Tv13black"
                        android:layout_weight="1"
                        android:text="@string/bank" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/et_moble"
                        android:inputType="phone"
                        android:gravity="right"
                        style="@style/Tv13black"
                        android:background="@null"
                        android:hint="@string/input_moble"
                        android:maxLines="1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/px5"
                    android:background="@color/white"
                    android:orientation="horizontal"
                    android:padding="@dimen/px20">

                    <android.support.v7.widget.AppCompatTextView
                        style="@style/Tv13black"
                        android:layout_weight="1"
                        android:text="@string/withdrawable1" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/et_balance"
                        style="@style/Tv13black"
                        android:gravity="right"
                        android:background="@null"
                        android:hint="@string/input_balance"
                        android:inputType="numberDecimal"
                        android:maxLines="1" />

                </LinearLayout>

                <com.flyco.roundview.RoundTextView
                    android:id="@+id/bt_submit"
                    style="@style/RoundBlueTextView"
                    android:layout_marginTop="@dimen/px80"
                    android:text="@string/submission1"
                    tl:rv_backgroundColor="@color/red_F72A61"
                    tl:rv_cornerRadius="@dimen/px60" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_yue"
                    style="@style/Tv12white"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/px20"
                    android:layout_marginTop="@dimen/px60"
                    android:layout_marginRight="@dimen/px20" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_content"
                    style="@style/Tv12white"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/px20"
                    android:layout_marginTop="@dimen/px20"
                    android:layout_marginRight="@dimen/px20" />

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </LinearLayout>

</layout>