<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tl="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:background="@color/blue_15163d"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/include_top"/>

        <LinearLayout
            android:padding="@dimen/px40"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.zhy.view.flowlayout.TagFlowLayout
                android:id="@+id/fl_layout"
                app:max_select="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_marginTop="@dimen/px40"
                android:text="@string/describe"
                style="@style/Tv15white" />

            <com.flyco.roundview.RoundFrameLayout
                android:layout_marginTop="@dimen/px20"
                app:rv_cornerRadius="@dimen/px20"
                app:rv_backgroundColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_text"
                    android:background="@null"
                    android:padding="@dimen/px20"
                    android:gravity="top"
                    android:minLines="10"
                    android:textSize="@dimen/size30"
                    android:hint="@string/describe1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.flyco.roundview.RoundFrameLayout>

            <com.flyco.roundview.RoundTextView
                android:layout_marginTop="@dimen/px60"
                android:id="@+id/bt_submit"
                tl:rv_backgroundColor="@color/red_F72A61"
                android:text="@string/submission"
                tl:rv_cornerRadius="@dimen/px60"
                style="@style/RoundBlueTextView" />

        </LinearLayout>


    </LinearLayout>

</layout>