<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tl="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:background="@color/blue_15163d"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginTop="@dimen/px60"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.flyco.tablayout.CommonTabLayout
                android:layout_margin="@dimen/px40"
                android:layout_marginRight="@dimen/px60"
                android:id="@+id/tb_layout"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="48dp"
                tl:tl_iconVisible="false"
                tl:tl_textSelectColor="@color/white"
                tl:tl_textUnselectColor="@color/blue_474578"
                tl:tl_indicator_color="@color/red_F72A61"
                tl:tl_indicator_height="4dp"
                tl:tl_indicator_width_equal_title="true"
                tl:tl_textsize="19sp"/>

            <FrameLayout
                android:id="@+id/fy_close"
                android:padding="@dimen/px40"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:background="@mipmap/dldelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_phone"
            android:layout_margin="@dimen/px40"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginLeft="@dimen/px20"
                android:text="+86  "
                android:gravity="center"
                android:textColor="@color/blue_474578"
                android:drawablePadding="@dimen/px20"
                android:drawableLeft="@mipmap/phone"
                style="@style/Tv12white" />

            <View
                android:layout_margin="@dimen/px10"
                android:layout_width="0.5dp"
                android:background="@color/blue_474578"
                android:layout_height="match_parent"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_phone"
                android:textSize="@dimen/size30"
                android:inputType="phone"
                android:maxLength="11"
                android:hint="@string/please_phone"
                android:padding="@dimen/px20"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_name"
            android:visibility="gone"
            android:layout_margin="@dimen/px40"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginLeft="@dimen/px20"
                android:gravity="center"
                android:textColor="@color/blue_474578"
                android:drawablePadding="@dimen/px20"
                android:drawableLeft="@mipmap/yonghuming"
                style="@style/Tv12white" />

            <View
                android:layout_margin="@dimen/px10"
                android:layout_width="0.5dp"
                android:background="@color/blue_474578"
                android:layout_height="match_parent"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_name"
                android:textSize="@dimen/size30"
                android:hint="@string/please_user"
                android:padding="@dimen/px20"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
        android:layout_marginLeft="@dimen/px40"
        android:layout_marginRight="@dimen/px40"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_pwd"
            android:textSize="@dimen/size30"
            android:inputType="textPassword"
            android:hint="@string/please_pwd3"
            android:padding="@dimen/px20"
            android:background="@null"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/iv_pwd"
            android:padding="@dimen/px20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:button="@drawable/cb_pwd" />

    </LinearLayout>

        <com.flyco.roundview.RoundTextView
            android:id="@+id/bt_submit"
            android:layout_margin="@dimen/px60"
            tl:rv_backgroundColor="@color/red_F72A61"
            android:text="@string/login"
            tl:rv_cornerRadius="@dimen/px60"
            style="@style/RoundBlueTextView" />

        <LinearLayout
            android:layout_marginTop="@dimen/px80"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_register"
                android:background="?actionBarItemBackground"
                android:padding="@dimen/px40"
                android:textColor="@color/red_F72A61"
                android:text="@string/new_register"
                style="@style/Tv15white" />

            <View
                android:background="@color/white"
                android:layout_width="@dimen/px2"
                android:layout_height="@dimen/px40"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_forget"
                android:background="?actionBarItemBackground"
                android:padding="@dimen/px40"
                android:text="@string/forget_pwd"
                style="@style/Tv15white" />

        </LinearLayout>

    </LinearLayout>

</layout>