<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:background="@color/blue_15163d"
        tools:ignore="MissingConstraints"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginTop="@dimen/px60"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <FrameLayout
                android:padding="@dimen/px40"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:background="@mipmap/back"
                    android:layout_height="wrap_content" />

            </FrameLayout>

            <include layout="@layout/include_search"
                />
            
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_search"
                android:text="@string/search"
                android:padding="@dimen/px40"
                style="@style/Tv12white" />

        </LinearLayout>

        <com.yc.mugua.weight.LoadingLayout
            android:id="@+id/loadinglayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout
                android:id="@+id/refreshLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:padding="@dimen/px40"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:textColor="@color/red_F72A61"
                        android:text="@string/hot_search"
                        style="@style/Tv12white" />

                    <com.zhy.view.flowlayout.TagFlowLayout
                        android:id="@+id/fl_hot"
                        app:max_select="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/px10" />

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_marginTop="@dimen/px20"
                        android:textColor="@color/red_F72A61"
                        android:text="@string/recommend"
                        style="@style/Tv12white" />

                    <com.zhy.view.flowlayout.TagFlowLayout
                        android:id="@+id/fl_recommend"
                        app:max_select="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/px10" />

                </LinearLayout>

            </com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout>

        </com.yc.mugua.weight.LoadingLayout>



    </LinearLayout>

</layout>